# copilens

./: .gitignore  COMPLETE_STATUS.md  Copilens_CLI_Technical_Documentation.txt  DASHBOARD_FIX_SUMMARY.md  FINAL_PRODUCTION_SUMMARY.md  GITHUB_TOKEN_SETUP.md  GUI_QUICK_START.md  HOLOGRAPHIC_PROGRESS_ENHANCEMENT.md  HOLOGRAPHIC_PROGRESS_NOTIFICATIONS.md  PRODUCTION_CHECKLIST.txt  README.md  SECURITY.md  STATS_AND_ARCHITECTURE_UPDATE.md  TESTING_GUIDE.md  TEST_PYGITHUB.md  package-lock.json  setup.ps1  setup.sh
copilens_cli/: .dockerignore  .gitignore  ADVANCED_FEATURES_ROADMAP.md  AGENTIC_MODE.md  AI_DETECTION_ALGORITHM.md  AI_INTEGRATION.md  API_KEY_SETUP.md  CHAT_SETUP_GUIDE.md  COMMAND_REFERENCE.md  COPILOT_AGENT_MODE.md  DEPLOYMENT_GUIDE.md  Dockerfile  ENHANCED_STATS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_WINDOWS.md  README.md  REMOTE_ANALYSIS_GUIDE.md  STATS_GUIDE.md  TESTING_REPORT.md  TESTING_VALIDATION.md  USAGE.md  WINDOWS_GUIDE.md  WINDOWS_SETUP.md  install.bat  pyproject.toml  requirements.txt  run_tests.py  setup-windows.ps1  setup.py  test-all-commands.ps1  test-commands.ps1  test-copilens.ps1
copilens_cli/src/copilens/: __init__.py  cli.py
copilens_cli/src/copilens/agentic/: __init__.py  core.py  gemini3_provider.py  llm_provider.py  tools.py
copilens_cli/src/copilens/analyzers/: architecture_detector.py  complexity.py  config_detector.py  metrics.py  risk.py  (+2 more)
copilens_cli/tests/: test_ai_detection_accuracy.py  test_ai_detector.py  test_config.py  test_integration.py  test_risk.py
(+98 files in other folders)
